--- a/framgia-ci.yml
+++ b/framgia-ci.yml
@@ -7,7 +7,7 @@ build:
   gerneral:
     image: alpine:latest
     prepare:
-      - echo "Build version: $BUILD_VERSION"
+      - echo "Build version is $BUILD_VERSION"
       - echo "Hi there! ^^"
       - export "export BUILD_VERSION=$BUILD_VERSION" > ci-env
       - cat ci-env
